# ksb-report

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  app.py  pyproject.toml
.github/workflows/: ci.yml
docs/: api-reference.md  guide.md
src/ksb_report/: __init__.py  api.py  cli.py  engine.py  pdf.py  schemas.py
src/ksb_report/templates/: __init__.py  invoice.py
tests/: test_api.py  test_engine.py  test_schemas.py
tests/fixtures/: sample_report.json
